--- a/Unit_1/css/style.css
+++ b/Unit_1/css/style.css
@@ -1,7 +1,11 @@
 body {
-	background-color: #333333;
+	background-color: black;
 }
 
-h1, p {
-	color: navy;
+h1{
+	color: white;
+}
+
+p {
+	color: gold;
 }
