--- a/unit_9/css/style.css
+++ b/unit_9/css/style.css
@@ -13,38 +13,34 @@
     clear: both;
     height: 0;
 }
-body {
-	background-color: #292726;
-}
 h1 {
 	font-family: 'Great Vibes', cursive;
 	text-align: center;
 	font-size: 90px;
 	font-weight: 100;
-	padding-top: 40vh;
-	margin: 0 0 0px 0;
+	padding-top: 1.5em;
+	margin: 0 0 20px 0;
 }
 .section_title {
 	padding: 100px;
 }
 h2 {
-	font-size: 22px;
+	font-size: 1.6em;
 	font-family: 'Roboto', sans-serif;
 	margin: 20px 0px 2px 0px;
 }
 h3 {
-	font-size: 1em;
+	font-size: 1.2em;
 	font-family: 'Roboto', sans-serif;
-	margin-bottom: 5px;
+	margin-bottom: 4px;
 	font-weight: 900;
 }
 h4 {
-	font-size: 18px;
+	font-size: 1.2em;
 	font-family: 'Roboto', sans-serif;
 	margin: 0px;
 	font-weight: 900;
 }
-
 p {
 	font-family: 'Roboto', sans-serif;
 }
@@ -86,6 +82,7 @@ li a, a {
 	float: right;
 }
 .content {
+	overflow: scroll;
 	background-color: #FFF;
 	height: 100%;
 	width: 50%;
@@ -99,10 +96,12 @@ li a, a {
 .content_container {
 	margin: 2% 4%;
 }
-
 .title {
 	height: 100%;
 	width: 50%;
+}
+.title h1{
+	height:;
 }
 .left {
 	float: left;
@@ -123,13 +122,10 @@ li a, a {
 	text-align: center;
 	color: #e16855;
 	margin: 95px 30px 0px 0px;
+	padding-bottom: 30px;
 }
 #intro_li {
 	padding-left: 60px;
-}
-#about_content {
-	list-style: disc;
-	text-align: left;
 }
 .title_nav{
 	text-align: center;
@@ -141,7 +137,9 @@ img {
 	margin: 40px auto 20px auto;
 	border-radius: 30px 90px 15px;
 }
-
+body {
+	background-color: #292726;
+}
 #intro {
 	width: 550px;
 	margin: 0 auto;
@@ -154,15 +152,17 @@ header {
 	color: #e16855;
 	text-align: center;
 }
-section {
-	height: 100vh;
+
+#about {
+	height: 54vw;
+}
+#resume {
+	height: 57vw;
 }
 #contact {
-	height:73vh;
+	height:50vw;
 }
-#contact h1{
-	padding-top: 1.4em;
-}
+
 .thanks {
 	height: 27vh;
 }
@@ -175,21 +175,43 @@ section {
 span {
 	color: #1f9b9c;
 }
-
 @media (max-width: 800px) {
-	h1, #contact h1 {
+	h1 {
+		font-size: 5em;
 		padding-top: .2em;
 	}
-	.thanks h1 {
-		float: left;
-		padding-top: .1em;
-		margin-left: 35%
+	img {
+		display: block;
+		height: 60%;
+		width: 60%;
+		margin: 20px auto 20px auto;
+		border-radius: 30px 90px 15px;
 	}
-	ul {
+	header {
+		margin: 10px auto 0 auto ;
+	}
+	#about {
+		height: 75vw;
+	}
+	#resume {
+		height: 82vw;
+	}
+	#contact {
+		height:80vw;
+	}
+	#intro_header {
+		position: relative;
+		margin: 30px auto;
+	}
+
+	.thanks h1 {
+		padding-top: .1em;
+	}
+	.title ul {
 		display: none;
 	}
-	p {
-		font-size: 14px;
+	.content, p li{
+		font-size: 1.5vw;
 	}
 	.left {
 		float: none;
@@ -214,19 +236,26 @@ span {
 
 @media only screen and (max-width: 565px) {
 	header {
-		margin-right: 5vw;
+		text-align: center;
 	}
+	#intro {
+	width: 90vw;
+	margin: 0 auto;
+	min-height: 200px;
+}
 	img {
 		display: block;
-		height: 90vw;
-		width: 90vw;
-		margin: 40px auto 20px 18px;
+		height: 60%;
+		width: 60%;
+		margin: 20px auto 20px auto;
 		border-radius: 0;
 	}
 
 	#intro_header {
+		font-size: 3em;
+		display: block;
+		text-align: center;
 		margin-top: 10px;
-		margin-left: 13vw;
 	}
 
 
@@ -234,24 +263,23 @@ span {
 	h1, #contact h1, .thanks h1  {
 		font-size: 80px;
 	}
+	#intro {
+	width: 90vw;
+	margin: 0 auto;
+	min-height: 200px;
+}
+	img {
+		display: block;
+		height: 40%;
+		width: 40%;
+		margin: 20px auto 20px auto;
+		border-radius: 0;
+	}
 	.title {
 		margin-top: 10px;
 		height: 125px;
 		width: 100%;
 	}
-	img {
-		display: block;
-		height: 90%;
-		width: 90%;
-		margin: 0;
-		border-radius: 0;
-	}
-	#intro_header {
-		margin-top: 10px;
-		margin-left: 14%;
-	}
+
 
 }
-
-
-
